--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,13 +4,13 @@ quarkus.package.type=uber-jar
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=app
 quarkus.datasource.password=app
-%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db-postgres
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db
 %prod.quarkus.datasource.username=${POSTGRES_USER}
 %prod.quarkus.datasource.password=${POSTGRES_PASSWORD}
 %prod.quarkus.datasource.jdbc.url=${DB_URL}
 quarkus.http.root-path=/api
-quarkus.http.access-log.enabled=true
+quarkus.http.access-log.enabled=false
 %dev.quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.datasource.devservices.enabled=false
-quarkus.hibernate-orm.database.generation=update
+%prod.quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.log.format-sql=true
 quarkus.http.cors=true
