--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,23 +2,23 @@ version: '3.1'
 
 services:
 
-  backend:
-    depends_on:
-      - db
-    container_name: franklyn_backend
-    build:
-      context: .
-      dockerfile: src/main/docker/Dockerfile
-    image: franklyn-application-server-image
-    ports:
-      - 8080:8080
-    environment:
-      POSTGRES_USER: app
-      POSTGRES_PASSWORD: app
-      POSTGRES_DB: db
-      DB_URL: jdbc:postgresql://franklyn_postgres:5432/db
-    networks:
-      - postgres
+#  backend:
+#    depends_on:
+#      - db
+#    container_name: franklyn_backend
+#    build:
+#      context: .
+#      dockerfile: src/main/docker/Dockerfile
+#    image: franklyn-application-server-image
+#    ports:
+#      - 8080:8080
+#    environment:
+#      POSTGRES_USER: app
+#      POSTGRES_PASSWORD: app
+#      POSTGRES_DB: db
+#      DB_URL: jdbc:postgresql://franklyn_postgres:5432/db
+#    networks:
+#      - postgres
 
   db:
     container_name: franklyn_postgres
