--- a/k8s/nginx/default.conf
+++ b/k8s/nginx/default.conf
@@ -14,7 +14,7 @@ server {
 
       set_real_ip_from 127.0.0.1;
       set_real_ip_from 192.168.2.1;
-      real_ip_header X-Forwarded-For;
+      real_ip_header X-Real-IP;
       real_ip_recursive on;
 
     }
