--- a/k8s/nginx/default.conf
+++ b/k8s/nginx/default.conf
@@ -11,11 +11,13 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host:$server_port;
 
+        set_real_ip_from 127.0.0.1;
+        set_real_ip_from 192.168.2.1;
+        real_ip_header X-Real-IP;
+        real_ip_recursive on;
 
-      set_real_ip_from 127.0.0.1;
-      set_real_ip_from 192.168.2.1;
-      real_ip_header X-Real-IP;
-      real_ip_recursive on;
+        # Additional headers for the backend server, if needed
+        proxy_set_header X-Forwarded-Proto $scheme;
 
     }
 }
