--- a/franklyn-frontned-lit/package.json
+++ b/franklyn-frontned-lit/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "immer": "^10.0.3",
     "lit-html": "^3.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.5.3",
+    "tailwindcss": "^3.3.5",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
