--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.package.type=uber-jar
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=app
 quarkus.datasource.password=app
-%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db-postgres
 %prod.quarkus.datasource.username=${POSTGRES_USER}
 %prod.quarkus.datasource.password=${POSTGRES_PASSWORD}
 %prod.quarkus.datasource.jdbc.url=${DB_URL}
@@ -14,3 +14,4 @@ quarkus.http.access-log.enabled=false
 %prod.quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.format-sql=true
 quarkus.http.cors=true
+quarkus.http.host=0.0.0.0
