--- a/franklyn-client/src/main/resources/application.properties
+++ b/franklyn-client/src/main/resources/application.properties
@@ -9,3 +9,4 @@ quarkus.http.cors=true
 quarkus.package.type=uber-jar
 quarkus.package.add-runner-suffix=false
 quarkus.http.port = 8081
+quarkus.http.host=0.0.0.0
