--- a/franklyn-client/src/main/resources/application.properties
+++ b/franklyn-client/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # Your configuration properties
 %dev.quarkus.rest-client.exam-api.url=http://localhost:8080
 %prod.quarkus.rest-client.exam-api.url=https://student.cloud.htl-leonding.ac.at/it190204/franklyn/
+%dev.quarkus.rest-client.streaming-server.url=http://localhost:8082/api
+# %prod.quarkus.rest-client.streaming-server.url=https://student.cloud.htl-leonding.ac.at/it190204/franklyn/
 quarkus.rest-client.exam-api.scope=javax.inject.Singleton
 quarkus.tls.trust-all=true
 quarkus.banner.enabled=false
